--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -6,14 +6,15 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: "Poppins", sans-serif;
 }
 
 /* Corps de la page */
 body {
     font-family: Arial, sans-serif;
-    background-color: #111;
     color: #f4f4f4;
-    line-height: 1.6;
+    line-height: 1;
+    background-color: #111;
 }
 
 /* Conteneur principal */
@@ -21,10 +22,9 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-    
 }
 
-/* En-tête */
+/* ---------------------------------------------------------------------------- header ---------------------------------------------------------------------------- */
 header {
     background-color: #111;
     height: 10vh;
@@ -66,16 +66,44 @@ header ul li a:hover {
     color: #ff4500;
 }
 
-/* Section principale */
+/* ---------------------------------------------------------------------------- section principale ---------------------------------------------------------------------------- */
 #main {
     position: relative;
     text-align: start;
-    color: #f4f4f4;
+    color: #ffffff;
     background-color: #111;
     height: 90vh;
     padding-left: 5%;
     padding-top: 8%;
 }
+.main-content p {
+    padding-top: 45px;
+}
+.work {
+    display: flex;
+
+    align-items: center;
+    padding: 0.8em 1.2em;
+    margin-top: 1em;
+
+    background-color: #222;
+    border-radius: 20px;
+    width: 20vw;
+}
+
+.work p {
+    color: #c7c7c7;
+    padding-top: 0px;
+}
+
+.vert {
+    width: 20px; /* Adjust the size as needed */
+    height: 20px; /* Adjust the size as needed */
+    background-color: rgb(49, 255, 49);
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 
 #main h1{
     font-family: "Kanit", sans-serif;
@@ -155,15 +183,12 @@ header ul li a:hover {
 }
 
 
-/* Section "Bento Boxes" */
+/* ---------------------------------------------------------------------------- bento box ---------------------------------------------------------------------------- */
 #bento-boxes {
     padding: 2rem 0;
-}
-
-
-#bento-boxes{
     background-color: #1e1e1e;
 }
+
 
 .bento-container {
     display: grid;
@@ -171,7 +196,7 @@ header ul li a:hover {
     grid-template-rows: auto;
     gap: 20px;
     height: 80vh;
-
+    line-height: 1.6;
 }
 
 .bento-box {
@@ -205,7 +230,6 @@ header ul li a:hover {
     transition: transform 0.5s ease, filter 0.5 ease;
 }
 
-
 .photo img{
     border-top-left-radius: 100px;
 }
@@ -214,7 +238,6 @@ header ul li a:hover {
     filter: none;
     transform: scale(1.03);
 }
-
 
 .description {
     grid-column: 2 / 4;
@@ -229,6 +252,7 @@ header ul li a:hover {
     width: 130%;
     height: 100%;
     background-color: #5b49d1;
+    font-size: larger;
 }
 /*formation*/
 .links {
@@ -240,7 +264,7 @@ header ul li a:hover {
     }
 
 .bento_gap{
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 /*links*/
@@ -253,7 +277,7 @@ header ul li a:hover {
 }
 
 .icon-link {
-    color: #fff;
+    color: #ffffff;
     font-size: 2.5rem; /* Ajustement de la taille des icônes */
     text-decoration: none;
     width: auto;
@@ -276,12 +300,15 @@ header ul li a:hover {
     height: 100%;
 }
 
-/* Section "Projects" */
+/* ---------------------------------------------------------------------------- projets ---------------------------------------------------------------------------- */
 #projects {
     margin-bottom: 2rem;
     width: 100%;
     padding: 2rem;
     background-color: #222;
+}
+.project-item h3 {
+    color: white;
 }
 
 #projects h2 {
@@ -320,7 +347,7 @@ header ul li a:hover {
     margin-bottom: 0.5rem;
 }
 
-/* Section "Contact" */
+/* ---------------------------------------------------------------------------- contact ---------------------------------------------------------------------------- */
 #contact {
     text-align: center;
     margin-bottom: 2rem;
@@ -613,4 +640,33 @@ ul {
     .card {
         width: 100%;
     }
+}
+
+/* ---------------------------------------------------------------------------- project ---------------------------------------------------------------------------- */
+
+.cardp {
+    background: #444;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+    width: 80%; /* Augmenter la largeur des cartes */
+    box-sizing: border-box;
+    font-size: 1.3em; /* Augmenter la taille de la police */
+    margin-left: 10%;
+    line-height: 1.6em;
+}
+
+.card h2 {
+    margin-top: 0;
+    font-size: 1.5em; /* Augmenter la taille de la police pour les titres */
+}
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 1em; /* Augmenter le padding des champs de formulaire */
+    border: 2px solid rgb(141, 109, 255);
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-size: 1.1em; /* Augmenter la taille de la police des champs de formulaire */
 }
